Add note revision and completion support
